<resources>
    <string name="app_name">StuffRandomizer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_data">Add data</string>
    <string name="action_clear_data">Clear data</string>
    <string name="name">Name</string>
    <string name="items">Items</string>
    <string name="warning_duplicate_item">Can\'t Add Duplicate Item to Category</string>
    <string name="warning_empty_item">Can\'t Add Empty Items to Category</string>
    <string name="warning_list_name_empty">Can\'t Save Category Without Name</string>
    <string name="warning_empty_item_list">Can\'t Save Category Without Items</string>
    <string name="removing_empty_category">Removing Empty Category</string>
    <string name="discard_draft">Discard draft?</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="hint_list_name">List Name</string>
    <string name="hint_item">Item</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="key_uuid">uuid</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="matches_label">Matches</string>
    <string name="roll">Roll</string>
    <string name="assignees">Assignees</string>
    <string name="assignments">Assignments</string>
    <string name="hint_match_name">Match Name</string>
    <string name="warning_match_name_empty">Can\'t Save Match Without Name</string>
    <string name="warning_match_assignments_empty">Can\'t Create Match Without Selecting Assignment Lists</string>
    <string name="expand">expand</string>
    <string name="back">back</string>
    <string name="refresh">refresh</string>
    <string name="home_label">Home</string>
    <string name="category_label">Categories</string>
    <string name="category_list_label">Category Lists</string>
    <string name="category_details_label">Category Details</string>
    <string name="party_list_label">Match Lists</string>
    <string name="party_creation_label">Match Creation</string>
    <string name="party_edit_label">Match Edit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="reroll">Reroll</string>
    <string name="add_match">Add match</string>
    <string name="selected">Selected:</string>
    <string name="menu">menu</string>
    <string name="quick_select">Quick Select</string>
    <string name="select_existing_list">Select existing list</string>
    <string name="enter_new_list">Enter new list</string>
    <string name="no_categories_tagline">No categories to display</string>
    <string name="no_categories_message">Create categories and they will be displayed here.</string>
    <string name="quick_select_dialog">quick select dialog</string>

</resources>