...
 *
 * @param items The items to display in the drop down
 * @param onSelect The function to call when an item is selected
 */
@Preview(showBackground = true)
@Composable
fun DropDownText(items: List<String> = listOf("Item", "Item 2", "Item3"),
                 onSelect: (index: Int) -> Unit = {}) {
    var expanded by remember {
        mutableStateOf(false)
    }

    var selected by remember {
...
