...
        Modifier
            .wrapContentSize()
            .padding(dimensionResource(id = R.dimen.padding_text)),
        colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.secondaryContainer,
            contentColor = MaterialTheme.colorScheme.onSecondaryContainer),) {
        TextField(
            modifier = Modifier.semantics { contentDescription = "editable_item" },
            value = editedItem,
            onValueChange = {
                editedItem = it
                update(it.text)
            },
            trailingIcon = {
...
